--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
                         </p>
                     </div>
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">21</h3>
+                        <h3 class="profile__info-number">0</h3>
                         <p class="profile__info-description">Satisfied <br> customers</p>
                     </div>
                 </div>
 
                     <div class="profile__buttons-small">
                         <!-- Insert a real number plus country code -->
-                        <a href="https://api.whatsapp.com/send?phone=51123456789&text=Hello, more information!" target="_blank" class="button button__small button__gray">
+                        <a href="https://web.telegram.org/z/AlessandroCreeply" target="_blank" class="button button__small button__gray">
                             <i class="ri-telegram-line"></i>
                         </a>
                         <!-- Insert your brand name or profile -->
-                        <a href="https://m.me/bedimcode" target="_blank" class="button button__small button__gray">
+                        <a href="https://discord.com/channels/@me/799302684908847164" target="_blank" class="button button__small button__gray">
                             <i class="ri-discord-line"></i>
                         </a>
                     </div>
